--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "",
   "dependencies": {
     "express": "^4.17.1",
+    "serverless-dynamodb-local": "^0.2.40",
     "serverless-http": "^2.7.0"
+  },
+  "devDependencies": {
+    "serverless-offline": "^8.8.0"
   }
 }
