--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "dependencies": {
     "express": "^4.17.1",
-    "serverless-http": "^2.7.0",
-    "serverless-offline-sns": "^0.76.0"
+    "serverless-http": "^2.7.0"
   },
   "devDependencies": {
     "serverless-offline": "^8.8.0",
+    "serverless-offline-sns": "^0.76.0",
     "serverless-dynamodb-local": "^0.2.40"
   }
 }
