--- a/serverless.yml
+++ b/serverless.yml
@@ -6,7 +6,7 @@ variablesResolutionMode: 20210326
 custom:
   companyName: 'ppfc'
   tableName: books-audit-trail
-  topicName: 'books-audit-trail-${sls:stage}'
+  topicName: '${self:custom.companyName}-books-audit-trail-${sls:stage}'
   topicArn:
     Fn::Join:
       - ''
@@ -33,7 +33,15 @@ custom:
   serverless-offline-sns:
     port: 4002 # a free port for the sns server to run on
     debug: true
-
+    accountId: 483382590502
+  webServiceEndpoint:
+        Fn::Join:
+          - ''
+          - - 'https://'
+            - Ref: ApiGatewayRestApi
+            - '.execute-api.'
+            - Ref: AWS::Region
+            - '.amazonaws.com'
 provider:
   region: ap-southeast-1
   name: aws
@@ -52,16 +60,43 @@ provider:
             - dynamodb:DeleteItem
           Resource:
             - Fn::GetAtt: [ LogsTable, Arn ]
+        - Effect: Allow
+          Action:
+            - SNS:Subscribe
+            - SNS:Publish
+          Resource:
+            - 'arn:aws:sns:${aws:region}:${aws:accountId}:${self:custom.topicName}'
+        - Effect: Allow
+          Action:
+            - 'ssm:GetParameter'
+            - 'ssm:PutParameter'
+          Resource:
+            - 'arn:aws:ssm:${aws:region}:${aws:accountId}:${self:custom.topicName}'
   environment:
     LOGS_TABLE: '${self:custom.companyName}-${self:custom.tableName}-${sls:stage}'
     AUDIT_SNS_TOPIC: 'arn:aws:sns:${aws:region}:${aws:accountId}:${self:custom.topicName}'
 
 functions:
-  api:
-    handler: handler.handler
+  sendSns:
+    handler: handler.sendSns
     events:
-      - httpApi: '*'
+      - http:
+          path: sendSns
+          method: get
+          cors: true
+
+  receiveSns:
+    handler: handler.receiveSns
+    events:
       - sns: arn:aws:sns:${aws:region}:${aws:accountId}:${self:custom.topicName}
+
+  logs:
+    handler: handler.getAuditTrails
+    events:
+    - http:
+          path: logs
+          method: get
+          cors: true
 
 resources:
   Resources:
@@ -70,11 +105,26 @@ resources:
       #DeletionPolicy: Retain
       Properties:
         AttributeDefinitions:
-          - AttributeName: userId
+          - AttributeName: booksModule
             AttributeType: S
-        KeySchema:
+          - AttributeName: createdAt
+            AttributeType: N
           - AttributeName: userId
+            AttributeType: S        
+        KeySchema:
+          - AttributeName: booksModule
             KeyType: HASH
+          - AttributeName: createdAt
+            KeyType: RANGE
+        GlobalSecondaryIndexes:
+          - IndexName: booksModuleIndex
+            KeySchema:
+              - AttributeName: userId
+                KeyType: HASH
+              - AttributeName: createdAt
+                KeyType: RANGE
+            Projection:
+              ProjectionType: 'ALL'
         BillingMode: PAY_PER_REQUEST
         TableName: '${self:custom.companyName}-${self:custom.tableName}-${sls:stage}'
     BooksAuditTrailTopic:
@@ -82,6 +132,18 @@ resources:
       Properties:
         DisplayName: 'Books Audit Trail SNS'
         TopicName: ${self:custom.topicName}
+    SNSArn:
+      Type: 'AWS::SSM::Parameter'
+      Properties:
+        Name: ${self:custom.topicName}
+        Type: String
+        Value: 'arn:aws:ssm:${aws:region}:${aws:accountId}:${self:custom.topicName}'
+    ApiEndpoint:
+      Type: 'AWS::SSM::Parameter'
+      Properties:
+        Name: '${self:custom.companyName}-${self:custom.tableName}-${sls:stage}-api-endpoint'
+        Type: String
+        Value: ${self:custom.webServiceEndpoint}
 plugins:
   - serverless-dynamodb-local
   - serverless-offline-sns
