--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
     "eslint-plugin-prettier": "4.0.0",
     "serverless-dynamodb-local": "^0.2.40",
     "serverless-offline": "^8.8.0",
-    "serverless-offline-sns": "^0.74.0"
-  },
-  "dependencies": {
+    "serverless-offline-sns": "^0.74.0",
     "aws-sdk-mock": "^5.7.0",
     "jest": "^28.1.0",
     "jest-sonar-reporter": "^2.0.0",
-    "json-diff": "^0.7.4",
-    "lodash": "^4.17.21",
     "sinon": "^14.0.0"
+  },
+  "dependencies": {
+    "json-diff": "^0.7.4",
+    "lodash": "^4.17.21"
   }
 }
