--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "books-audit-trail",
+  "name": "aesi-audit-trail",
   "version": "1.0.0",
   "description": "",
   "scripts": {
     "lint": "eslint src"
   },
   "devDependencies": {
+    "aws-sdk-mock": "^5.7.0",
     "eslint": "8.12.0",
     "eslint-config-google": "0.14.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-json": "3.1.0",
     "eslint-plugin-prettier": "4.0.0",
-    "serverless-dynamodb-local": "^0.2.40",
-    "serverless-offline": "^8.8.0",
-    "serverless-offline-sns": "^0.74.0",
-    "aws-sdk-mock": "^5.7.0",
     "jest": "^28.1.0",
     "jest-sonar-reporter": "^2.0.0",
+    "serverless-dynamodb-local": "^0.2.40",
+    "serverless-offline": "^8.8.1",
+    "serverless-offline-sns": "^0.74.0",
     "sinon": "^14.0.0"
   },
   "dependencies": {
