--- a/package.json
+++ b/package.json
@@ -2,24 +2,34 @@
   "name": "aesi-audit-trail",
   "version": "1.0.0",
   "description": "",
+  "type": "commonjs",
   "scripts": {
     "lint": "eslint src"
   },
   "devDependencies": {
+    "@babel/core": "^7.9.6",
+    "@babel/plugin-transform-modules-commonjs": "^7.10.4",
+    "@babel/plugin-transform-runtime": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
     "aws-sdk-mock": "^5.7.0",
-    "eslint": "8.12.0",
-    "eslint-config-google": "0.14.0",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-plugin-json": "3.1.0",
-    "eslint-plugin-prettier": "4.0.0",
+    "babel-jest": "^26.0.1",
+    "eslint": "^7.0.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jest": "^23.13.0",
+    "eslint-plugin-prettier": "^3.1.3",
     "jest": "^28.1.0",
     "jest-sonar-reporter": "^2.0.0",
+    "serverless-bundle": "^5.2.0",
     "serverless-dynamodb-local": "^0.2.40",
     "serverless-offline": "^8.8.1",
     "serverless-offline-sns": "^0.74.0",
-    "sinon": "^14.0.0"
+    "sinon": "^14.0.0",
+    "prettier": "^2.0.5"
   },
   "dependencies": {
+    "aws-sdk": "^2.1347.0",
     "json-diff": "^0.7.4",
     "lodash": "^4.17.21"
   }
